ci: fix sonarcloud

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -66,7 +66,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-            .\.sonar\scanner\dotnet-sonarscanner begin /k:"soat-fiap_bmb.soat-fiap_fiap.hackathon.jobmanager" /o:"soat-fiap" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"  /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml /d:sonar.inclusions=**/*.cs /d:sonar.exclusions=**/Program.cs /d:sonar.scanner.scanAll=false
+            .\.sonar\scanner\dotnet-sonarscanner begin /k:"soat-fiap_fiap.hackathon.jobmanager" /o:"soat-fiap" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"  /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml /d:sonar.inclusions=**/*.cs /d:sonar.exclusions=**/Program.cs /d:sonar.scanner.scanAll=false
             dotnet build --no-incremental
             dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
             .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
