feat: add jwt auth settings with cognito

--- a/src/JobManager.Api/JobManager.Api.csproj
+++ b/src/JobManager.Api/JobManager.Api.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1" />
         <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.405.8" />
         <PackageReference Include="AWSSDK.SQS" Version="3.7.400.30" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
