--- a/src/JobManager.Api/appsettings.Development.json
+++ b/src/JobManager.Api/appsettings.Development.json
@@ -7,13 +7,20 @@
     }
   },
   "JwtOptions": {
-    "Issuer": "https://localhost:7000",
-    "Audience": "https://localhost:7000"
+    "Authority": "https://cognito-idp.us-east-1.amazonaws.com/UserPoolId",
+    "MetadataAddress": "https://cognito-idp.us-east-1.amazonaws.com/UserPoolId/.well-known/openid-configuration",
+    "IncludeErrorDetails": true,
+    "RequireHttpsMetadata": false,
+    "TokenValidationParameters": {
+      "ValidateIssuer": true,
+      "ValidateAudience": false,
+      "ValidateIssuerSigningKey": true
+    }
   },
   "CognitoSettings": {
-    "UserPoolId": "us-east-1_4vI6pWujT"
+    "UserPoolId": "UserPoolId"
   },
   "VideoReceivedSettings": {
-    "QueueUrl": "https://sqs.us-east-1.amazonaws.com/123123123123/received_videos"
+    "QueueUrl": "https://sqs.us-east-1.amazonaws.com//received_videos"
   }
 }
