--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -29,9 +29,7 @@ jobs:
         run: |
           cat <<EOF > terraform/api.auto.tfvars
           eks_cluster_name = "${{ vars.BMB_EKS_CLUSTER_NAME }}"
-          jwt_signing_key = "${{ secrets.BMB_JWT_SECRET_KEY }}"
-          jwt_issuer = "${{ vars.BMB_JWT_ISSUER }}"
-          jwt_aud = "${{ vars.BMB_JWT_AUDIENCE }}"
+          user_pool_name = "${{ vars.BMB_USER_POOL_NAME }}"
           internal_elb_name = "${{ vars.BMB_INTERNAL_LB_NAME }}"
           api_access_key_id = "${{ secrets.AWS_API_ACCESS_KEY_ID }}"
           api_secret_access_key = "${{ secrets.AWS_API_SECRET_ACCESS_KEY }}"
