--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -195,10 +195,8 @@ jobs:
           API_IMAGE_TAG: ${{needs.build-docker-image.outputs.API_IMAGE_TAG}}
         run: |
           cat <<EOF > terraform/api.auto.tfvars
+          user_pool_name = "${{ vars.BMB_USER_POOL_NAME }}"
           eks_cluster_name = "${{ vars.BMB_EKS_CLUSTER_NAME }}"
-          jwt_signing_key = "${{ secrets.BMB_JWT_SECRET_KEY }}"
-          jwt_issuer = "${{ vars.BMB_JWT_ISSUER }}"
-          jwt_aud = "${{ vars.BMB_JWT_AUDIENCE }}"
           api_docker_image = "${{ env.API_IMAGE_TAG }}"
           internal_elb_name = "${{ vars.BMB_INTERNAL_LB_NAME }}"
           api_access_key_id = "${{ secrets.AWS_API_ACCESS_KEY_ID }}"
