fix: add manual trigger for actions

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -9,6 +9,11 @@ on:
       - '.gitignore'
   pull_request:
     types: [opened, synchronize, reopened]
+  workflow_dispatch:
+    inputs:
+      name:
+        description: "Manual deploy"
+        default: "Manual deploy"
 
 env:
   REGISTRY: ghcr.io
