feat: add email options to config email sender

--- a/src/JobManager.Api/appsettings.Development.json
+++ b/src/JobManager.Api/appsettings.Development.json
@@ -22,5 +22,8 @@
   },
   "VideoReceivedSettings": {
     "QueueUrl": "https://sqs.us-east-1.amazonaws.com//received_videos"
+  },
+  "EmailOptions": {
+    "FromEmail": ""
   }
 }
