tests: add unit tests for controllers

--- a/tests/JobManager.Tests/JobManager.Tests.csproj
+++ b/tests/JobManager.Tests/JobManager.Tests.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\JobManager.Application\JobManager.Application.csproj" />
+      <ProjectReference Include="..\..\src\JobManager.Controllers\JobManager.Controllers.csproj" />
     </ItemGroup>
 
 </Project>
